# kas-l2

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  rustfmt.toml  taplo.toml
capability/errors/: Cargo.toml
capability/runtime/: Cargo.toml
core/: README.md
core/atomics/: Cargo.toml
core/macros/: Cargo.toml
core/types/: Cargo.toml
crates/atomic/: Cargo.toml
crates/causal-executor/: Cargo.toml
crates/causal-resource/: Cargo.toml
crates/causal-resources/: Cargo.toml
crates/causal-scheduler/: Cargo.toml
crates/core/: Cargo.toml
crates/dependency-graph/: Cargo.toml
crates/executor/: Cargo.toml
crates/io/: Cargo.toml
crates/io-core/: Cargo.toml
crates/io-manager/: Cargo.toml
crates/macros/: Cargo.toml
crates/move-utils/: Cargo.toml
crates/move-utils/src/: compiler.rs
crates/move-vm/: Cargo.toml
crates/move-vm/src/: execution_context.rs  instruction.rs  lib.rs  module_resolver.rs  modules.rs  object_access.rs  object_id.rs  transaction.rs  transaction_context.rs  type_alias.rs  vm.rs
crates/move-vm/src/instructions/: function_call.rs  instruction.rs  publish_modules.rs
crates/program/: Cargo.toml
crates/program/examples/hello-world/: Cargo.toml
crates/program/src/: lib.rs
crates/resource/: Cargo.toml
crates/resource-provider/: Cargo.toml
crates/rocksdb-store/: Cargo.toml  Readme.md
crates/rocksdb-store/src/: config.rs  lib.rs  runtime_state_ext.rs  store.rs  write_batch.rs
crates/runtime/: Cargo.toml
crates/runtime-batch-processor/: Cargo.toml
crates/runtime-core/: Cargo.toml
crates/runtime-macros/: Cargo.toml
crates/runtime-processor/: Cargo.toml
crates/runtime-scheduler/: Cargo.toml
crates/runtime/src/: account_storage.rs  app_registry.rs  lib.rs  runtime.rs  runtime_state.rs
crates/runtime/src/builtin/: abort.rs  cpi.rs  sol_alloc_free.rs  sol_log.rs  sol_log_64.rs  sol_memcpy.rs  sol_panic.rs
crates/runtime/tests/: hello_world.rs  move_vm_tests.rs  runtime_tests.rs
crates/scheduler/: Cargo.toml
crates/storage/: Cargo.toml
crates/vm/: Cargo.toml
crates/workerpool/: Cargo.toml
example-apps/hello-world/: Cargo.toml
example-apps/hello-world/src/: lib.rs
examples/hello-world/: Cargo.toml
examples/hello-world/src/: lib.rs
kas_program/: Cargo.toml
kas_program/src/: entrypoint.rs  lib.rs
kas_program/src/randomness/: buffer.rs  custom.rs  host.rs  zkvm.rs
macros/: Cargo.toml
macros/src/: lib.rs
move-runtime/runtime/: Cargo.toml
move-runtime/runtime/tests/: move_vm_tests.rs  runtime_tests.rs
move-runtime/test-suite/: Cargo.toml
move-runtime/test-suite/src/: assert_ret_val_ref.rs  assert_tx.rs  assert_tx_effect.rs  compile_source_code.rs  extensions.rs  lib.rs
move-runtime/test-suite/tests/: e2e.rs
move-runtime/utils/: Cargo.toml
move-runtime/vm/: Cargo.toml
move-runtime/vm/src/: execution_context.rs  instruction.rs  lib.rs  modules.rs  object_access.rs  object_id.rs  ownership.rs  transaction.rs  type_alias.rs  vm.rs
multi-vm/: Cargo.toml
multi-vm-macros/: Cargo.toml
multi-vm/src/: runtime_context.rs
multi-vm/tests/: hello_world.rs
node/: README.md
node/vm/: Cargo.toml
node/vm/src/: lib.rs
object-auth/capabilities/: Cargo.toml
patches/solana-program-entrypoint/: Cargo.toml
patches/solana-program-entrypoint/src/: lib.rs
program/: Cargo.toml
runtime/: Cargo.toml
runtime-macros/: Cargo.toml
runtime/builder/: Cargo.toml
runtime/builder/src/: builder.rs  lib.rs
runtime/core/: Cargo.toml
runtime/core/src/: lib.rs  notarization_worker.rs  runtime.rs  runtime_tx.rs  utils.rs  vm.rs
runtime/core/src/data/: ownership.rs  state.rs  state_diff.rs  versioned_state.rs
runtime/core/src/execution/: executor.rs  runtime_tx.rs  transaction.rs  transaction_processor.rs  vm.rs  worker.rs  workers_api.rs
runtime/core/src/notarization/: notarization_worker.rs  notarizer.rs
runtime/core/src/resources/: access_handle.rs  access_metadata.rs  resource.rs  resource_access.rs
runtime/core/src/scheduling/: access_handle.rs  batch.rs  batch_queue.rs  runtime_tx.rs  scheduler.rs  storage_cmd.rs
runtime/core/src/storage/: cmd.rs  runtime_state.rs
runtime/execution/: Cargo.toml
runtime/execution-dag/: Cargo.toml
runtime/execution-dag/src/: access_handle.rs  batch.rs  config.rs  execution_dag.rs  lib.rs  resource.rs  resource_access.rs  runtime_batch.rs  runtime_tx.rs  scheduler.rs  state_diff.rs  storage_cmd.rs  vm.rs  worker_loop.rs
runtime/execution-workers/: Cargo.toml
runtime/execution-workers/src/: batch_queue.rs  execution_workers.rs  executor.rs  task.rs  worker.rs  workers_api.rs
runtime/execution/src/: batch_queue.rs  executor.rs  lib.rs  worker.rs  workers_api.rs
runtime/manager/: Cargo.toml
runtime/manager/src/: access_handle.rs  chain.rs  cpu_task.rs  lib.rs  manager.rs  resource.rs  resource_access.rs  rollback.rs  runtime_batch.rs  runtime_context.rs  runtime_tx.rs  state_diff.rs  storage_cmd.rs  vm_interface.rs  worker_loop.rs
runtime/rocksdb-store/: Cargo.toml
runtime/rocksdb-store/src/: config.rs  runtime_state_ext.rs  state_space_ext.rs  store.rs  write_batch.rs
runtime/state/: Cargo.toml
runtime/state/src/: lib.rs  state.rs  versioned_state.rs
runtime/test-suite/: Cargo.toml
runtime/test-suite/tests/: e2e.rs
scheduling/: README.md
scheduling/test-suite/: Cargo.toml
scheduling/test-suite/tests/: e2e.rs
state/: README.md
state/ptr-rollback/: Cargo.toml
state/ptr-rollback/src/: lib.rs
state/rollback-ptr/: Cargo.toml
state/rollback-ptr/src/: lib.rs
state/version/: Cargo.toml
state/version/src/: lib.rs
state/versioned-state/: Cargo.toml
state/versioned-state/src/: lib.rs
storage/: README.md
storage/rocksdb-store/: Cargo.toml
storage/rocksdb-store/src/: config.rs  runtime_state_ext.rs  state_space_ext.rs  store.rs  write_batch.rs
storage/state/: Cargo.toml
storage/state/src/: lib.rs  state.rs  versioned_state.rs
transaction-runtime/: README.md
vm/: Cargo.toml
vm-macros/: Cargo.toml
zk-runtime-exec/: Cargo.toml
zk-runtime-macros/: Cargo.toml
zk-runtime-prov/: Cargo.toml
(+585 files in other folders)
