[package]
name = "kas-l2-program"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "3.0.0"
base64ct = "=1.7.3" # pin to old version for compatibility with kas-l2-program
getrandom = { version = "0.2.16", features = ["custom"] } # This ensures all transitive getrandom users compile on SP1

[target.'cfg(all(target_arch = "riscv32", target_vendor = "succinct"))'.dependencies]
sp1-zkvm = "5.2.1"