[workspace]

[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

[features]
default = []
custom-heap = []
custom-panic = []

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "sp1_guest"
path = "src/lib.rs"

[dependencies]
# add this line (even if you don't use it directly)
base64ct = { version = "=1.7.3", default-features = false }
kas_program = { path = "../../kas_program" }
