[workspace]

[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

[lib]
name = "hello_world_solana"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "hello_world_sp1"
path = "src/lib.rs"

[dependencies]
base64ct = { version = "=1.7.3", default-features = false } # pin to avoid issues
kas_program = { path = "../../kas_program" }
