[workspace]

[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

[features]
custom-heap = []
custom-panic = []

[lib]
name = "hello_world_solana"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "hello_world_sp1"
path = "src/lib.rs"

[dependencies]
kas_program = { path = "../../kas_program" }
