[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

[features]
custom-heap = []
custom-panic = []

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "prover"
path = "src/lib.rs"

[dependencies]
solana-program = "3.0.0"

[patch.crates-io]
solana-program-entrypoint = { path = "../../patches/solana-program-entrypoint" }