[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

[features]
custom-heap = []
custom-panic = []

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "prover"
path = "src/lib.rs"

[dependencies]
solana-program = "3.0.0"
base64ct = { version = "=1.7.3", default-features = false } # pin to 1.7.3 to avoid edition2024

[patch.crates-io]
solana-address = { git = "https://github.com/hmoog/solana-sdk-sp1", branch = "patch", package = "solana-address" }
solana-address-lookup-table-interface = { git = "https://github.com/hmoog/solana-sdk-sp1", branch = "patch", package = "solana-address-lookup-table-interface" }
solana-big-mod-exp = { git = "https://github.com/hmoog/solana-sdk-sp1", branch = "patch", package = "solana-big-mod-exp" }
solana-blake3-hasher = { git = "https://github.com/hmoog/solana-sdk-sp1", branch = "patch", package = "solana-blake3-hasher" }
solana-bls-signatures = { git = "https://github.com/hmoog/solana-sdk-sp1", branch = "patch", package = "solana-bls-signatures" }
solana-bn254 = { git = "https://github.com/hmoog/solana-sdk-sp1", branch = "patch", package = "solana-bn254" }
solana-cpi = { git = "https://github.com/hmoog/solana-sdk-sp1", branch = "patch", package = "solana-cpi" }
solana-define-syscall = { git = "https://github.com/hmoog/solana-sdk-sp1", branch = "patch", package = "solana-define-syscall" }
solana-epoch-stake = { git = "https://github.com/hmoog/solana-sdk-sp1", branch = "patch", package = "solana-epoch-stake" }
solana-frozen-abi = { git = "https://github.com/hmoog/solana-sdk-sp1", branch = "patch", package = "solana-frozen-abi" }
solana-instruction = { git = "https://github.com/hmoog/solana-sdk-sp1", branch = "patch", package = "solana-instruction" }
solana-instructions-sysvar = { git = "https://github.com/hmoog/solana-sdk-sp1", branch = "patch", package = "solana-instructions-sysvar" }
solana-keccak-hasher = { git = "https://github.com/hmoog/solana-sdk-sp1", branch = "patch", package = "solana-keccak-hasher" }
solana-message = { git = "https://github.com/hmoog/solana-sdk-sp1", branch = "patch", package = "solana-message" }
solana-msg = { git = "https://github.com/hmoog/solana-sdk-sp1", branch = "patch", package = "solana-msg" }
solana-program = { git = "https://github.com/hmoog/solana-sdk-sp1", branch = "patch", package = "solana-program" }
solana-program-entrypoint = { git = "https://github.com/hmoog/solana-sdk-sp1", branch = "patch", package = "solana-program-entrypoint" }
solana-program-memory = { git = "https://github.com/hmoog/solana-sdk-sp1", branch = "patch", package = "solana-program-memory" }
solana-pubkey = { git = "https://github.com/hmoog/solana-sdk-sp1", branch = "patch", package = "solana-pubkey" }
solana-sdk = { git = "https://github.com/hmoog/solana-sdk-sp1", branch = "patch", package = "solana-sdk" }
solana-secp256k1-recover = { git = "https://github.com/hmoog/solana-sdk-sp1", branch = "patch", package = "solana-secp256k1-recover" }
solana-secp256r1-program = { git = "https://github.com/hmoog/solana-sdk-sp1", branch = "patch", package = "solana-secp256r1-program" }
solana-sha256-hasher = { git = "https://github.com/hmoog/solana-sdk-sp1", branch = "patch", package = "solana-sha256-hasher" }
solana-sysvar = { git = "https://github.com/hmoog/solana-sdk-sp1", branch = "patch", package = "solana-sysvar" }
solana-transaction-error = { git = "https://github.com/hmoog/solana-sdk-sp1", branch = "patch", package = "solana-transaction-error" }
solana-vote-interface = { git = "https://github.com/hmoog/solana-sdk-sp1", branch = "patch", package = "solana-vote-interface" }
