[package]
edition = "2021"
name    = "vprogs-move-runtime-test-suite"
version = "0.1.0"

[dependencies]
anyhow                       = "1.0.100"
bcs                          = "0.1.6"
move-compiler                = { git = "https://github.com/MystenLabs/sui.git", rev = "0d4ab7d" }
move-core-types              = { git = "https://github.com/MystenLabs/sui.git", rev = "0d4ab7d" }
move-symbol-pool             = { git = "https://github.com/MystenLabs/sui.git", rev = "0d4ab7d" }
tempfile                     = "3.23.0"
vfs                          = "0.10.0"
vprogs-move-runtime-vm       = { path = "../vm" }
vprogs-runtime-manager       = { path = "../../runtime/manager" }
vprogs-runtime-rocksdb-store = { path = "../../runtime/rocksdb-store" }
vprogs-runtime-state         = { path = "../../runtime/state" }
vprogs-storage-manager       = { path = "../../storage/manager" }
vprogs-storage-types         = { path = "../../storage/types" }
