[package]
edition = "2021"
name    = "vprogs-move-runtime-test-suite"
version = "0.1.0"

[dependencies]
anyhow                       = "1.0.100"
bcs                          = "0.1.6"
move-compiler                = { git = "https://github.com/MystenLabs/sui.git", rev = "0d4ab7d" }
move-core-types              = { git = "https://github.com/MystenLabs/sui.git", rev = "0d4ab7d" }
move-symbol-pool             = { git = "https://github.com/MystenLabs/sui.git", rev = "0d4ab7d" }
tempfile                     = "3.23.0"
vfs                          = "0.10.0"
vprogs-move-runtime-vm       = { path = "../vm" }
vprogs-scheduling-manager    = { path = "../../scheduling/manager" }
vprogs-storage-manager       = { path = "../../storage/manager" }
vprogs-storage-rocksdb-store = { path = "../../storage/rocksdb-store" }
vprogs-storage-state         = { path = "../../storage/state" }
vprogs-storage-types         = { path = "../../storage/types" }
