[package]
name = "kas-l2-move-runtime-vm"
version = "0.1.0"
edition = "2021"

[dependencies]
move-core-types = { git = "https://github.com/MystenLabs/sui.git", rev = "0d4ab7d" }
move-binary-format = { git = "https://github.com/MystenLabs/sui.git", rev = "0d4ab7d" }
move-vm-runtime = { git = "https://github.com/MystenLabs/sui.git", rev = "0d4ab7d" }
move-vm-types = { git = "https://github.com/MystenLabs/sui.git", rev = "0d4ab7d" }
move-stdlib-natives = { git = "https://github.com/MystenLabs/sui.git", rev = "0d4ab7d" }
kas-l2-runtime-execution-dag = { path = "../../runtime/execution-dag" }
kas-l2-storage-interface = { path = "../../storage/interface" }
kas-l2-runtime-state-space = { path = "../../runtime/state-space" }
kas-l2-runtime-interface = { path = "../../runtime/interface" }
bcs = "0.1.6"
borsh = "1.5.7"
indexmap = "2.11.0"
anyhow = "1.0.99"
