[package]
edition = "2021"
name    = "vprogs-move-runtime-vm"
version = "0.1.0"

[dependencies]
anyhow                    = "1.0.100"
bcs                       = "0.1.6"
borsh                     = "1.6.0"
indexmap                  = "2.12.1"
move-binary-format        = { git = "https://github.com/MystenLabs/sui.git", rev = "0d4ab7d" }
move-core-types           = { git = "https://github.com/MystenLabs/sui.git", rev = "0d4ab7d" }
move-stdlib-natives       = { git = "https://github.com/MystenLabs/sui.git", rev = "0d4ab7d" }
move-vm-runtime           = { git = "https://github.com/MystenLabs/sui.git", rev = "0d4ab7d" }
move-vm-types             = { git = "https://github.com/MystenLabs/sui.git", rev = "0d4ab7d" }
vprogs-scheduling-manager = { path = "../../scheduling/manager" }
vprogs-scheduling-types   = { path = "../../scheduling/types" }
vprogs-storage-state      = { path = "../../storage/state" }
vprogs-storage-types      = { path = "../../storage/types" }
