[package]
edition = "2021"
name    = "kas-l2-vm"
version = "0.1.0"

[dependencies]
kas-l2-runtime-manager                         = { path = "../../runtime/manager" }
kas-l2-runtime-state                           = { path = "../../runtime/state" }
kas-l2-storage-types                           = { path = "../../storage/types" }
kas-l2-transaction-runtime                     = { path = "../../transaction-runtime/transaction-runtime" }
kas-l2-transaction-runtime-error               = { path = "../../transaction-runtime/error" }
kas-l2-transaction-runtime-lock                = { path = "../../transaction-runtime/lock" }
kas-l2-transaction-runtime-object-access       = { path = "../../transaction-runtime/object-access" }
kas-l2-transaction-runtime-object-id           = { path = "../../transaction-runtime/object-id" }
kas-l2-transaction-runtime-transaction         = { path = "../../transaction-runtime/transaction" }
kas-l2-transaction-runtime-transaction-effects = { path = "../../transaction-runtime/transaction-effects" }
