[package]
name = "solana-program-entrypoint"
description = "The Solana BPF program entrypoint supported by the latest BPF loader."
documentation = "https://docs.rs/solana-program-entrypoint"
version = "3.1.0"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/anza-xyz/solana-sdk"
homepage = "https://anza.xyz/"
license = "Apache 2.0"
edition = "2021"

rust-version = "1.81.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
solana-account-info = { version = "3.0.0" }
solana-define-syscall = { version = "3.0.0" }
solana-msg = { version = "3.0.0" }
solana-program-error = { version = "3.0.0" }
solana-pubkey = { version = "3.0.0", default-features = false }

[target.'cfg(all(target_arch = "riscv32", target_vendor = "succinct"))'.dependencies]
sp1-zkvm = "5.2.1"