[package]
name = "kas-l2-runtime-core"
version = "0.1.0"
edition = "2021"

[dependencies]
kas-l2-core-atomics = { path = "../../core/atomics" }
kas-l2-storage-manager = { path = "../../storage/manager" }
kas-l2-runtime-state = { path = "../state" }
kas-l2-storage-interface = { path = "../../storage/interface" }
kas-l2-runtime-state-space = { path = "../state-space" }
kas-l2-runtime-interface = { path = "../interface" }
borsh = { version = "1.5.7", features = ["derive"] }
crossbeam-utils = "0.8.21"
crossbeam-deque = "0.8.6"
crossbeam-queue = "0.3.12"
intrusive-collections = "0.9.7"
tokio = { version = "1.47.1", features = ["rt", "sync"] }
tap = "1.0.1"
kas-l2-core-macros = { path = "../../core/macros" }
fastrand = "2.3.0"
