[package]
edition = "2021"
name    = "vprogs-runtime-execution-workers"
version = "0.1.0"

[dependencies]
crossbeam-deque       = "0.8.6"
crossbeam-queue       = "0.3.12"
crossbeam-utils       = "0.8.21"
fastrand              = "2.3.0"
intrusive-collections = "0.9.7"
tap                   = "1.0.1"
vprogs-core-atomics   = { path = "../../core/atomics" }
vprogs-core-macros    = { path = "../../core/macros" }
