[package]
name = "kas-l2-runtime-execution"
version = "0.1.0"
edition = "2021"

[dependencies]
kas-l2-core-atomics = { path = "../../core/atomics" }
kas-l2-core-macros = { path = "../../core/macros" }
crossbeam-deque = "0.8.6"
crossbeam-queue = "0.3.12"
crossbeam-utils = "0.8.21"
intrusive-collections = "0.9.7"
tap = "1.0.1"
fastrand = "2.3.0"
