[package]
name = "kas-l2-runtime-execution"
version = "0.1.0"
edition = "2021"

[dependencies]
kas-l2-core-atomics = { path = "../../core/atomics" }
kas-l2-runtime-state-space = { path = "../state-space" }
kas-l2-storage-interface = { path = "../../storage/interface" }
crossbeam-utils = "0.8.21"
crossbeam-deque = "0.8.6"
crossbeam-queue = "0.3.12"
fastrand = "2.3.0"
tokio = { version = "1.47.1", features = ["rt", "sync"] }
tap = "1.0.1"
