[package]
edition = "2021"
name    = "vprogs-runtime-rocksdb-store"
version = "0.1.0"

[dependencies]
num_cpus = "1.17.0"
rocksdb = { version = "0.24.0", default-features = false, features = [
  "lz4",
  "zstd",
  "snappy",
  "zlib",
  "bzip2",
  "jemalloc",
  "mt_static",
] }
tap = "1.0.1"
vprogs-runtime-state = { path = "../state" }
vprogs-storage-types = { path = "../../storage/types" }
