[package]
edition = "2021"
name    = "kas-l2-runtime-state"
version = "0.1.0"

[dependencies]
borsh                  = "1.6.0"
kas-l2-runtime-types   = { path = "../types" }
kas-l2-storage-manager = { path = "../../storage/manager" }
kas-l2-storage-types   = { path = "../../storage/types" }
tap                    = "1.0.1"
