[package]
edition = "2021"
name    = "vprogs-runtime-state"
version = "0.1.0"

[dependencies]
borsh                  = "1.6.0"
tap                    = "1.0.1"
vprogs-runtime-types   = { path = "../types" }
vprogs-storage-manager = { path = "../../storage/manager" }
vprogs-storage-types   = { path = "../../storage/types" }
