[package]
edition = "2021"
name    = "kas-l2-runtime-test-suite"
version = "0.1.0"

[dependencies]
kas-l2-runtime-manager       = { path = "../manager" }
kas-l2-runtime-rocksdb-store = { path = "../../runtime/rocksdb-store" }
kas-l2-runtime-state         = { path = "../state" }
kas-l2-runtime-types         = { path = "../types" }
kas-l2-storage-manager       = { path = "../../storage/manager" }
kas-l2-storage-types         = { path = "../../storage/types" }
tempfile                     = "3.23.0"
tracing                      = "0.1"
tracing-subscriber           = { version = "0.3", features = ["env-filter"] }
