[package]
edition = "2021"
name    = "vprogs-runtime-test-suite"
version = "0.1.0"

[dependencies]
tempfile                     = "3.23.0"
vprogs-runtime-manager       = { path = "../manager" }
vprogs-runtime-rocksdb-store = { path = "../../runtime/rocksdb-store" }
vprogs-runtime-state         = { path = "../state" }
vprogs-runtime-types         = { path = "../types" }
vprogs-storage-manager       = { path = "../../storage/manager" }
vprogs-storage-types         = { path = "../../storage/types" }
