[package]
edition = "2021"
name    = "vprogs-state-version"
version = "0.1.0"

[dependencies]
tap                       = "1.0.1"
vprogs-core-types         = { path = "../../core/types" }
vprogs-state-ptr-latest   = { path = "../ptr-latest" }
vprogs-state-ptr-rollback = { path = "../ptr-rollback" }
vprogs-state-space        = { path = "../space" }
vprogs-storage-manager    = { path = "../../storage/manager" }
vprogs-storage-types      = { path = "../../storage/types" }
