[package]
edition = "2021"
name    = "vprogs-state-versioned-state"
version = "0.1.0"

[dependencies]
tap                     = "1.0.1"
vprogs-scheduling-types = { path = "../../scheduling/types" }
vprogs-state-space      = { path = "../state-space" }
vprogs-storage-manager  = { path = "../../storage/manager" }
vprogs-storage-types    = { path = "../../storage/types" }
