[package]
edition = "2021"
name    = "vprogs-storage-state"
version = "0.1.0"

[dependencies]
borsh                   = "1.6.0"
tap                     = "1.0.1"
vprogs-scheduling-types = { path = "../../scheduling/types" }
vprogs-storage-manager  = { path = "../manager" }
vprogs-storage-types    = { path = "../types" }
